# Monica

./: .gitignore  README.md
Monica for iOS/: .gitignore  AndroidFeatureMatrix.md  README.md  cross-platform-migration-plan.md  findings.md  progress.md
Monica for iOS/App/MonicaApp/: AndroidParityDesign.swift  AndroidParityVaultHomeView.swift  AppRootView.swift  AppShareExtensionInboxStore.swift  GeneratorRootView.swift  Info.plist  LockScreenViews.swift  MonicaApp.entitlements  MonicaApp.swift  MonicaAppEnvironment.swift  MonicaShortcutsAppIntents.swift  OneDriveMSALAuthenticationService.swift  ScannerAndStatusViews.swift  SettingsRootView.swift
Monica for iOS/Artifacts/MDBX/: README.md
Monica for iOS/Extensions/MonicaAutoFillExtension/: AutoFillCredentialProviderViewController.swift  Info.plist  MonicaAutoFillExtension.entitlements
Monica for iOS/Extensions/MonicaShareExtension/: Info.plist  MonicaShareExtension.entitlements  ShareViewController.swift
Monica for iOS/Extensions/MonicaWidgetExtension/: Info.plist  MonicaWidget.swift  MonicaWidgetExtension.entitlements
Monica for iOS/Monica.xcodeproj/: project.pbxproj
Monica for iOS/Scripts/: build-mdbx-xcframework.sh  generate-mdbx-swift-bindings.sh
Monica for iOS/SwiftPackages/MSAL/: Package.swift
Monica for iOS/SwiftPackages/MonicaCore/: Package.swift
Monica for iOS/SwiftPackages/MonicaMDBX/: Package.swift
mdbx/: Cargo.toml
mdbx/crates/mdbx-ffi/: Cargo.toml
mdbx/crates/mdbx-ffi/src/: lib.rs
mdbx/crates/mdbx-ffi/tests/: ffi_smoke.rs
mdbx/crates/mdbx-ios-ffi/: Cargo.toml
mdbx/crates/mdbx-ios-ffi/src/: lib.rs
mdbx/crates/mdbx-ios-ffi/tests/: ffi_smoke.rs
mdbx/crates/mdbx-storage/src/: unlock.rs
mdbx/crates/mdbx-storage/src/repo/: entry.rs
(+50 files in other folders)
