[workspace]
resolver = "2"
members = [
    "crates/mdbx-core",
    "crates/mdbx-crypto",
    "crates/mdbx-storage",
    "crates/mdbx-sync",
    "crates/mdbx-ffi",
    "crates/mdbx-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
unicode-normalization = "0.1"
zeroize = "1.8"
